Fix cropping (min-height)

--- a/hui/style/_colour.scss
+++ b/hui/style/_colour.scss
@@ -1,5 +1,6 @@
 .colour-main{
-    height:100vh;
+    min-height: 100vh;
+    height:800px;
     display: grid; 
     grid-template-columns:  1fr 1fr 1fr ;
     grid-template-rows: 0.2fr 0.3fr 0.1fr 0.8fr;
